<resources>
    <string name="app_name">demoapp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="ipbconnect">IPB Connect</string>
    <string name="logout">Logout</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="konfirm_pass">Konfirmasi Password</string>
    <string name="laki2">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="daftar">Daftar</string>
    <string name="registrasi">Registrasi</string>
    <string name="nim">NIM (opsional)</string>
    <string name="status">Status saat ini</string>
    <string name="angkatan">Angkatan</string>
    <string name="alumni">Alumni</string>
    <string name="mahasiswa">Mahasiswa</string>
    <string name="prodi">Program Studi</string>
    <string name="pilihprodi">Pilih Program Studi</string>
</resources>
